--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html, body {
     top: 0; left: 0;
     width: 100vw;
     height: 100vh;
-    background-image: url('img/9380903.jpg');
+    background-image: url('9380903.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
